<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/ed_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name" />
    <CheckBox
        android:id="@+id/cb_isImageItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_image_item" />
    <EditText
         android:id="@+id/ed_item_description"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="2"
        android:gravity="top"
        android:hint="@string/item_description" />
    <Space
  android:layout_width="1dp"
  android:layout_height="160dp"/>
    <Button
        android:layout_width="match_parent"
                android:layout_height="1dp"
         android:layout_weight="1" 
        android:text="@string/add_item" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/cancel" />
    
</LinearLayout>